# argocd-manager

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
