[project]
name = "argocd-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argocd-client",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[tool.uv.sources]
argocd-client = { git = "https://github.com/globocom/argocd-client.git" }
